--- a/Back_end/PHP/tableaux/style.css
+++ b/Back_end/PHP/tableaux/style.css
@@ -8,7 +8,7 @@ main{
     max-width: 80%;
     margin: 2rem auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 table{
@@ -17,7 +17,9 @@ table{
 }
 td{
     text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 th{
     text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
